# ctw_mass_marketing

./: requirements.txt  setup.cfg
.github/workflows/: release-builder.yml
scripts/: build_windows.bat
src/: portable.py
src/ctw_mass_marketing/: gui.py  otsconfig.py  runtimedata.py
src/ctw_mass_marketing/api/: ringcentral.py  smtp.py
src/ctw_mass_marketing/qt/: mainui.py  settings.py
src/ctw_mass_marketing/qt/qtui/: main.ui
src/ringcentral_mass_sms/: gui.py
src/ringcentral_mass_sms/qt/: mainui.py
src/ringcentral_mass_sms/qt/qtui/: main.ui
