[metadata]
name = ringcentral_mass_sms
version = 0.1
description = Mass send sms using the ring central api.
long_description = file: README.md
long_description_content_type = text/markdown
author = Justin Donofrio
author_email = justin026@protonmail.com
url = https://github.com/justin025/ringcentral_mass_sms
keywords = music, downloader, audio
license = GPL-2.0 License

[options]
package_dir=
    =src
python_requires = >= 3.0
packages = find:
install_requires = file:requirements.txt

[options.entry_points]
console_scripts =
    ringcentral_mass_sms = ringcentral_mass_sms.gui:main

[options.packages.find]
where=src

[options.package_data]
* = *.ui, *.png, *.desktop, *.qm, *.html, *.css, *.ico, *.js
