[metadata]
name = ctw_mass_marketing
version = 0.0.2
description = Mass send sms or email.
long_description = file: README.md
long_description_content_type = text/markdown
author = Justin Donofrio
author_email = justin026@protonmail.com
url = https://github.com/justin025/ctw_mass_marketing
license = GPL-2.0 License

[options]
package_dir=
    =src
python_requires = >= 3.0
packages = find:
install_requires = file:requirements.txt

[options.entry_points]
console_scripts =
    ctw_mass_marketing = ctw_mass_marketing.gui:main

[options.packages.find]
where=src

[options.package_data]
* = *.ui, *.png, *.ico
